@@ -413,9 +413,7 @@ block|{
 name|field
 operator|.
 name|checkFieldCacheSource
-argument_list|(
-name|qparser
-argument_list|)
+argument_list|()
 expr_stmt|;
 return|return
 operator|new
