@@ -1601,9 +1601,7 @@ block|{
 name|field
 operator|.
 name|checkFieldCacheSource
-argument_list|(
-name|parser
-argument_list|)
+argument_list|()
 expr_stmt|;
 return|return
 operator|new
